2.0-beta4

* Add a grouped history page for better visibility of which apps are active
* Better security by hiding email and telephone details from anonymous views
* Deffer (once) builds of maven projects that have a dependency also in the build queue
* Add "never" option to build schedules

* Fixed marked up text to render URLs as links
* Fix some issues with memory constraints when updating
* Fix possible crashes with the system if setup is not complete
* Improvements to document edit styling to better match document view styles
* Fix issue with hour remaining calculations
* Fix some errors with milestone exports

2.0-beta3

* Support building of Xcode 4 workspaces
* Add build schedule names and allow execution of each configuration in the build page
* Dynamically update workspaces where CocoaPods are used for Xcode projects
* Support for setting tasks on an ant build
* Build Android apps using ant to avoid eclipse issues
* Created a simple JSON API framework
* Update navigation on mobile to fit on smaller screens
* Group recently used and active projects at the top of the menu
* Add a manual update page for easier upgrading of unreleased versions
* Include a create menu item for documents
* Allow re-opening of completed milestones

* Don't send notifications to disabled accounts
* Re-enable eclipse build handling
* Fixed a lot of authentication based issues 
* Fixed what objects were returned in the XML feeds
* Fix layout of login dialog for small screens


2.0-beta2

* Added lint - static code analysis for Android Maven projects
* Add inline setting of milestone and assignee in issue lists
* Allow setting debug option at runtime from admin configuration
* Add quick jump for issue number, filename, account etc in quick search field
* Add grouping of milestones
* Add button to drop issues currenty assigned to you

* Fix issues with animations not working offline
* Fix issue where disabled child projects were still being shown in menu