@@ -4,6 +4,7 @@
 * Better security by hiding email and telephone details from anonymous views
 * Deffer (once) builds of maven projects that have a dependency also in the build queue
 * Add "never" option to build schedules
+* Don't forget the project when displaying an error page
 
 * Fixed marked up text to render URLs as links
 * Fix some issues with memory constraints when updating
